--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
-	"prefix" : "dm",
-	"token" : "OTE5MDQzNDYwMDQyOTgxMzc2.YbQD6w.zyzpywlcS3A8OYYcn5cCMzDGI-I",
+	"prefix" : "%",
+	"token" : "OTQxMjA2Mjc1MzY5MzYxNDY4.YgSkpg.HqzAHqihjjwKkw_T_SGZ4ndMcKY",
 	"delay" : "1",
 	"log_dms" : "on"
 }
